objects/HW_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Date__c</fullName>
        <label>Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Missed_Date__c</fullName>
        <label>HW Missed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HW_Status__c</fullName>
        <label>HW Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No Homework</fullName>
                </value>
                <value>
                    <fullName>Poor Quality</fullName>
                </value>
                <value>
                    <fullName>Abs When Due</fullName>
                </value>
                <value>
                    <fullName>Abs When Given</fullName>
                </value>
                <value>
                    <fullName>No Work</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Poor Rdng Log</fullName>
                </value>
                <value>
                    <fullName>Inc. Sentences</fullName>
                </value>
                <value>
                    <fullName>Not Signed</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Extension Con&apos;t</fullName>
                </value>
                <value>
                    <fullName>Counts On Time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Late_or_Missing__c</fullName>
        <formula>Case(HW_Status__c , &quot;Complete&quot;,&quot;Late&quot;,
&quot;Count as on time&quot;, &quot;N/A&quot;,
&quot;Missing&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag to determine if a missed HW is considered Late or Missing</inlineHelpText>
        <label>Late or Missing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Required__c</fullName>
        <description>Checks if HW Assignment Record requires notification today</description>
        <formula>IF(
AND (
Responsibility_Center__c = TODAY(),
Due_Date__c = TODAY(),
TEXT(Picklist_Value__r.Internal_Code__c) = &quot;sf_missing&quot;
),
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Notification Required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipName>Homework_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_First_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checks, removes it from the second alert</description>
        <inlineHelpText>Did Parent/Guardian of this Student receive the an Alert?</inlineHelpText>
        <label>Received Today&apos;s Alert?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsibility_Center__c</fullName>
        <label>Responsibility Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Notification_Required__c</fullName>
        <formula>IF(
AND (
Responsibility_Center__c = TODAY(),
Due_Date__c = TODAY(),

Case(Picklist_Value__r.Internal_Code__c, 
&quot;sf_missing&quot;, &quot;Yes&quot;,
&quot;sf_incomplete&quot;, &quot;Yes&quot;,
&quot;No&quot;) = &quot;Yes&quot;),

&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <label>Second Notification Required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <formula>Student_Section__r.Section__r.Name</formula>
        <label>Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Read_Only__c</fullName>
        <formula>Picklist_Value__r.Name</formula>
        <label>Status Read Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Section</label>
        <referenceTo>Student_Section__c</referenceTo>
        <relationshipName>Homework_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipName>Homework_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipName>Homework_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Homework</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HT-{000000}</displayFormat>
        <label>HT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Homework</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>